Bug 1790965 - Correct CookieService to get only session cookies from persistent storage when requested for session cookies. r=necko-reviewers,kershaw

Differential Revision: https://phabricator.services.mozilla.com/D164907